# Mu-Simulation

./: .gitignore  CMakeLists.txt  README.md
Parma/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Parma/include/: Parma.hh
Parma/src/: Parma.cc  main-generator_forC.f90  subroutines.f90
include/: MuonDataController.hh  action.hh  tracking.hh
include/geometry/: Box.hh  Construction.hh  Cosmic.hh  CosmicEarth.hh
include/physics/: FileReaderGenerator.hh  Generator.hh  ParmaFileGenerator.hh  ParmaGenerator.hh  Particle.hh
src/: ChangeCrossSection.cc  analysis.cc  dump_geometry.cc  simulation.cc  tracking.cc
src/action/: ActionInitialization.cc  EventAction.cc  FiveBodyMuonDecayChannel.cc  GeneratorAction.cc  MuonDataController.cc  PhysicsList.cc  RunAction.cc  TrackingAction.cc
src/geometry/: Cavern.cc  Construction.cc  CosmicEarth.cc  Earth.cc
src/geometry/box/: Box.cc
src/geometry/cosmic/: Cosmic.cc  Scintillator.cc
src/physics/: CORSIKAReaderGenerator.cc  FileReaderGenerator.cc  Generator.cc  HepMCGenerator.cc  ParmaFileGenerator.cc  ParmaGenerator.cc  Particle.cc  PolarGenerator.cc  PythiaGenerator.cc  RangeGenerator.cc
studies/box/background/: run_pythia_w.mac  w_to_muon.cmnd  z_to_muon.cmnd
studies/box/cosmics/muon/: file_reader_parma.mac  muon_gun.mac
studies/box/cosmics/parma/: parma_muon.mac
studies/box/signal/: hh_to_muon.cmnd
